<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/android_image"
        app:srcCompat="@drawable/android_image" />

    <Button
        android:id="@+id/button_my_favourite_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_favourite_place"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_my_football_club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_football_club"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creator"
        android:textAllCaps="false"/>
</LinearLayout>
